manifests/dev/cnpg/Service-cnpg-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: cnpg
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cloudnative-pg
  name: cnpg-webhook-service
  namespace: cnpg
spec:
  ports:
    - name: webhook-server
      port: 443
      targetPort: webhook-server
  selector:
    app.kubernetes.io/instance: cnpg
    app.kubernetes.io/name: cloudnative-pg
  type: ClusterIP
